syntax = "proto3";

package store_user.v1;

import "store/v1/store.proto";
import "user/v1/user.proto";

option go_package = "sabitou/proto/store_user/v1;storeUserV1";

service StoreUserService {
  rpc CreateStoreUser(CreateStoreUserRequest) returns (CreateStoreUserResponse);
  rpc GetStoreUser(GetStoreUserRequest) returns (GetStoreUserResponse);
  rpc UpdateStoreUser(UpdateStoreUserRequest) returns (UpdateStoreUserResponse);
  rpc DeleteStoreUser(DeleteStoreUserRequest) returns (DeleteStoreUserResponse);
}

enum StoreRole {
  UNSPECIFIED = 0;
  ADMIN = 1;
  MANAGER = 2;
  STAFF = 3;
}
message StorePermission {
  bool create_article = 2;
  bool append_article_in_stock = 3;
  bool remove_article_from_stock = 4;
  bool edit_store_information = 5;
  bool financial_report = 6;
}
message StoreUser {
  string id = 1;
  string store_id = 2;
  string user_id = 3;
  bool active = 4;
  string role = 5;
  StorePermission store_permissions = 6;
  string created_at = 7;
  string updated_at = 8;
}

message CreateStoreUserRequest {
  StoreUser store_user = 1;
}

message CreateStoreUserResponse {
  string id = 1;
}

message GetStoreUserRequest {
  string id = 1;
}

message GetStoreUserResponse {
  string id = 1;
  store.v1.Store store = 2;
  user.v1.User user = 3;
  bool active = 4;
  StorePermission store_permissions = 5;
  string created_at = 10;
  string updated_at = 11;
}

message UpdateStoreUserRequest {
  StoreUser store_user = 1;
}

message UpdateStoreUserResponse {
  StoreUser store_user = 1;
}

message DeleteStoreUserRequest {
  string id = 1;
}

message DeleteStoreUserResponse {
  bool success = 1;
}
